Billede størrelse i højere opløsning

--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
   <meta name="description"
-    content="Zar Paulos helt egen hjemmeside. Find: | Lyrik | Musik | Tourplan | Kontaktinformationer | - Zar Paulo er et ungt aarhusiansk band bestående af 5 venner med afsæt i 70'ernes postpunk og 80'ernes artrock">
+    content="Zar Paulos officielle hjemmeside. Find: | Lyrik | Musik | Tourplan | Kontaktinformationer | - Zar Paulo er et ungt aarhusiansk band bestående af 5 venner med afsæt i 70'ernes postpunk og 80'ernes artrock">
   <meta name="keywords"
     content="Zar Paulo, Zarpaulo, 80er, dansk, zar paulo, spotify, band, rock, synth, pop, ung, rock band, aarhus, musik, postpunk, artrock, upcoming, stop believing, i løb, radiotårn, højen, emil vammen johannesen, gaffa, danske hits">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
