--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
   <meta name="description"
-    content="Sangtekst og lyrik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
+    content="Sangtekster og lyrik fra bandet Zar Paulo. Lyrik til sangene Stop Believing, Højen, Radiotårn og I løb">
   <meta name="keywords"
     content="Zar Paulo, lyrik, sangtekster zar paulo, stop believing lyrics, stop believing lyrik, højen lyrik, højen lyrics, radiotårn lyrik, radiotårn lyrics, i løb lyrik, i løb lyrics">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
